[gd_scene load_steps=3 format=3 uid="uid://bxs7lmruydgcw"]

[ext_resource type="Script" uid="uid://brmspdsu58333" path="res://src/upgrade/upgrade_button.gd" id="1_eelp4"]
[ext_resource type="PackedScene" uid="uid://dojgmv85rvmht" path="res://src/ui/currency_counter.tscn" id="1_mpgtc"]

[node name="UpgradeButton" type="Button"]
custom_minimum_size = Vector2(360, 360)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -720.0
offset_bottom = -1560.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_eelp4")

[node name="TextureRectIcon" type="TextureRect" parent="."]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0.25098)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stretch_mode = 3

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
alignment = 1

[node name="LabelEffectTitle" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
z_index = 1
custom_minimum_size = Vector2(280, 0)
layout_mode = 2
text = "effect name"
horizontal_alignment = 1
autowrap_mode = 2
uppercase = true

[node name="LabelEffect" type="Label" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
z_index = 1
layout_mode = 2
theme_override_font_sizes/font_size = 96
text = "1.0s"
horizontal_alignment = 1

[node name="CurrencyCost" parent="MarginContainer/VBoxContainer" instance=ExtResource("1_mpgtc")]
unique_name_in_owner = true
z_index = 1
layout_mode = 2
alignment = 1

[connection signal="pressed" from="." to="." method="_on_pressed"]
